--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -1,4 +1,4 @@
-<div class="container mx-auto mt-10 p-6 bg-white rounded-lg shadow-md">
+<div class="container mx-auto mt-10 p-6 bg-white rounded-lg shadow-md w-full md:w-3/5">
     <div class="mb-4">
         <form action="/dashboard" method="GET" style="display: inline;">
             <button type="submit" class="btn btn-second">Dashboard</button>
