--- a/views/editBlog.ejs
+++ b/views/editBlog.ejs
@@ -1,4 +1,4 @@
-<div class="container mx-auto mt-10 p-6 bg-white rounded-lg shadow-md">
+<div class="container mx-auto mt-10 p-6 bg-white rounded-lg shadow-md w-full md:w-3/5">
     <h2 class="text-3xl font-bold mb-6">Edit Post</h2>
 
     <!-- Close Button to go back to Manage Stories -->
