--- a/views/story.ejs
+++ b/views/story.ejs
@@ -3,7 +3,7 @@
 <div class="container mx-auto my-16 p-10 bg-white rounded-lg shadow-xl w-full md:w-3/5">
     <div class="mb-8 text-right">
         <form action="/dashboard" method="GET" style="display: inline;">
-            <button type="submit" class="btn btn-main px-6 py-2 text-lg">Go Back to Dashboard</button>
+            <button type="submit" class="btn btn-main px-6 py-2 text-lg">Dashboard</button>
         </form>
     </div>
     <!-- Blog Post Content -->
